--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,23 @@
 name = "libvoxel"
 version = "0.1.0"
 edition = "2018"
-target_os = "android"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 [target.'cfg(target_os="android")'.dependencies]
-jni = { version = "0.5", default-features = false }
 gl = "*"
-
-# rust-analyzer.cargo.target_os = "android"
+egli = "0.5.0"
+jni = { version = "0.5", default-features = false }
+android-ndk = "*"
+image = "*"
+cgmath = "*"
+rand = "0.7.3"
+noise = "0.7.0"
 
 [lib]
 name = "voxel"
 crate-type = ["dylib"]
+
+[build]
+target_os = "android"
