--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 gl = "*"
 egli = "0.5.0"
 jni = { version = "0.5", default-features = false }
-android-ndk = "*"
+# android-ndk = "*"
 image = "*"
 cgmath = "*"
 rand = "0.7.3"
