--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ image = "*"
 cgmath = "*"
 rand = "0.7.3"
 noise = "0.7.0"
+
+lazy_static = "*"
+
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.5", default-features = false }
 android_log = "*"
